Make plunk cards max-width: 90% to prevent overflow smaller sizes

--- a/assets/css/plunker.css
+++ b/assets/css/plunker.css
@@ -148,6 +148,7 @@ form.gist-import button {
 
 #recent .thumbnail img {
   width: 205px;
+  max-width: 90%;
   height: 154px;
   border: 1px solid #ccc;
   -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
